--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "multer": "^1.4.1",
     "pg": "^7.10.0",
     "sequelize": "^5.7.4"
   }
